Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

25 August 2004 Andreas Fabri
- changes in doc_tex for pdflatex

24 August 2004 Mariette
 - added a Weighted_tag in Triangulation_2 and Regular_triangulation_2
 - fixed the pb of copy_triangulation for hierarchies of regular triangulation

13 August 2004 Sylvain Pion
- T_hierarchy_vertex_base : remove useless and dubious "if (this)".

12 August 2004 Andreas Fabri
- Added #ifndef CGAL_CFG_USING_BASE_MEMBER_BUG_2 in several header files

02 August 2004 Mariette Yvinec
- fixed clean of demo/Triangulation_2/makefile

24 July 2004 Sylvain Pion
- Fix warnings when no assertions.

22 June 2004 Sylvain Pion
- Add some "using base::member;" to please g++ 3.4.

22 June 2004 Sylvain Pion
- Fix signed/unsigned warnings introduced by last change.

17 June 2004 Andreas Fabri
- Bug fix in Triangulation_data_structure_2<..>::file_input(..)

22 May 2004 Sylvain Pion
- Workaround bug of g++ 3.3.0 with the conversion operators.

17 May 2004 Menelaos Karavelas
- replaced Point by Point_2 in the demo in order to resolve clash with
  the Mac version of Qt

14 May 2004 Andreas Fabri
- Replaced template parameter K with K_ in class Weighted_point_mapper_2
  to avoid error message for SunPro and Intel compiler

26 April 2004 Mariette Yvinec
- fixed a useless test in _test_triangulation_tds.C
- fixed deprecated code (replace NULL by Vertex_handle() or Face_handle()
  in _test_cls_tds_face.C
- add a short name for Regular_triangulation_vertex_base_2

20 April 2004 Mariette Yvinec
- changed test_conflict in Delaunay and Contrained_Delaunay
  to avoid, in most cases,  testing for infinite faces twice in  row 

19 April 2004 Mariette Yvinec
- fixed insert_in_edge in Regular_triangulation_2
- changed insert case VERTEX in  Regular_triangulation_2. 
   The new version is  more easy to debug

17 April 2004 Sylvain Pion